Enhance README with detailed project overview and installation instructions
- Expanded the README to provide a comprehensive introduction to J-SSH, including its key features and core components.
- Added installation instructions with multiple options for users, including prerequisites and setup for building from source.
- Included a usage guide with step-by-step workflows for creating sessions, actions, and triggers.
- Introduced visual elements such as screenshots to illustrate the application’s interface and functionality.
- Updated license information and contribution guidelines to encourage community involvement.